Fixed wrong alignment

--- a/ukbg/theme/static/bootstrap-3.3.5/less/siguv-footer.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/siguv-footer.less
@@ -6,7 +6,7 @@
   .footer-wrapper .col-xs-12 {
     padding-left:0;
     padding-right:0;
-    text-align: right;
+    text-align: left;
 	} 
 	.container {
 		padding:0 !important;
